; ModuleID = '/home/carl/AnghaBench/linux/drivers/mfd/extr_rc5t583.c___rc5t583_set_ext_pwrreq2_control.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mfd/extr_rc5t583.c___rc5t583_set_ext_pwrreq2_control.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }

@RC5T583_DS_DC0 = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [40 x i8] c"PWRREQ2 is invalid control for rail %d\0A\00", align 1
@EINVAL = common dso_local global i32 0, align 4
@RICOH_ONOFFSEL_REG = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [46 x i8] c"Error in updating the ONOFFSEL 0x10 register\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, i32, i32)* @__rc5t583_set_ext_pwrreq2_control to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__rc5t583_set_ext_pwrreq2_control(%struct.device* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.device*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.device* %0, %struct.device** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %9 = load i32, i32* %6, align 4
  %10 = load i32, i32* @RC5T583_DS_DC0, align 4
  %11 = icmp ne i32 %9, %10
  br i1 %11, label %12, label %18

12:                                               ; preds = %3
  %13 = load %struct.device*, %struct.device** %5, align 8
  %14 = load i32, i32* %6, align 4
  %15 = call i32 (%struct.device*, i8*, ...) @dev_err(%struct.device* %13, i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0), i32 %14)
  %16 = load i32, i32* @EINVAL, align 4
  %17 = sub nsw i32 0, %16
  store i32 %17, i32* %4, align 4
  br label %30

18:                                               ; preds = %3
  %19 = load %struct.device*, %struct.device** %5, align 8
  %20 = load i32, i32* @RICOH_ONOFFSEL_REG, align 4
  %21 = call i32 @BIT(i32 2)
  %22 = call i32 @rc5t583_set_bits(%struct.device* %19, i32 %20, i32 %21)
  store i32 %22, i32* %8, align 4
  %23 = load i32, i32* %8, align 4
  %24 = icmp slt i32 %23, 0
  br i1 %24, label %25, label %28

25:                                               ; preds = %18
  %26 = load %struct.device*, %struct.device** %5, align 8
  %27 = call i32 (%struct.device*, i8*, ...) @dev_err(%struct.device* %26, i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.1, i64 0, i64 0))
  br label %28

28:                                               ; preds = %25, %18
  %29 = load i32, i32* %8, align 4
  store i32 %29, i32* %4, align 4
  br label %30

30:                                               ; preds = %28, %12
  %31 = load i32, i32* %4, align 4
  ret i32 %31
}

declare dso_local i32 @dev_err(%struct.device*, i8*, ...) #1

declare dso_local i32 @rc5t583_set_bits(%struct.device*, i32, i32) #1

declare dso_local i32 @BIT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
